@@ -16,12 +16,8 @@ Build-Depends: debhelper (>= 8),
                libglib2.0-doc,
                libgtk2.0-doc,
                libsoup2.4-dev,
-               python-all-dev (>= 2.6.6-3~),
-               python-gobject-dev,
-               python-gtk2-dev,
                mate-common
 Standards-Version: 3.9.2
-X-Python-Version: >= 2.5
 
 Package: libmateweather
 Architecture: any
@@ -63,18 +59,6 @@ Description: MateWeather shared library (development files)
  services for numerous locations.
  .
  This package contains the development files.
-
-Package: python-mateweather
-Architecture: any
-Section: python
-Depends: ${shlibs:Depends},
-         ${misc:Depends},
-         ${python:Depends}
-Description: Python bindings for MateWeather
- libmateweather is a library to access weather information from online
- services for numerous locations.
- .
- This package contains the Python bindings.
 
 Package: libmateweather-dbg
 Section: debug
