@@ -1,9 +1,6 @@
 #!/usr/bin/make -f
 
-#DEB_BUILDDIR = debian/build
-
 include /usr/share/cdbs/1/rules/debhelper.mk
-include /usr/share/cdbs/1/class/python-autotools.mk
 include /usr/share/cdbs/1/class/autotools.mk
 include /usr/share/cdbs/1/rules/utils.mk
 
@@ -11,7 +8,7 @@ DEB_DH_INSTALL_ARGS += --list-missing
 
 DEB_CONFIGURE_SCRIPT := ./autogen.sh
 
-DEB_CONFIGURE_EXTRA_FLAGS += --enable-locations-compression --disable-static --enable-python
+DEB_CONFIGURE_EXTRA_FLAGS += --enable-locations-compression --disable-static --enable-python=no
  
 DEB_MAKE_INSTALL_TARGET = install DESTDIR=$(DEB_DESTDIR) MATECONF_DISABLE_MAKEFILE_SCHEMA_INSTALL=1
 
